Adding a structure_type to allow 1D without species diffusion (1D_no_diff)

--- a/DOC/nautilus_documentation.tex
+++ b/DOC/nautilus_documentation.tex
@@ -346,6 +346,8 @@ You can make simulation in 1D:
 \begin{verbatim}
 structure_type = 1D_disk_z
 \end{verbatim}
+You have to choose between 1D with diffusion (\verb|1D_disk_z|) and 1D without species diffusion (\verb|1D_no_diff|).
+
 
 Then you must define the total number of spatial points:
 \begin{verbatim}
