Few modifications of the documentation. Correction of the format of the line JH2 in the file surface_parameters.in

--- a/DOC/nautilus_documentation.tex
+++ b/DOC/nautilus_documentation.tex
@@ -641,13 +641,13 @@ Only one reaction for each of the two types (10 and 11).
 \end{remarque}
 \item[\textbf{14}] Grain surface reactions
 \item[\textbf{15}] Thermal evaporation
-\item[\textbf{16}] Cosmic-ray evaporation
-\item[\textbf{17-18}] Photodissociations by Cosmic rays on grain surfaces
+\item[\textbf{16}] Evaporation induced by cosmic-ray stocastic heating
+\item[\textbf{17-18}] Photodissociations by Cosmic rays induced UV photons on grain surfaces
 \item[\textbf{19-20}] Photodissociations by UV photons on grain surfaces
-\item[\textbf{21}] Grain surface reactions
+\item[\textbf{21}] Grain surface reactions speedup by cosmic-ray heating (CRID)
 \item[\textbf{66}] Photodesorption by external UV
 \item[\textbf{67}] Photodesorption by UV induced by cosmic rays
-\item[\textbf{98}] storage of $\molecule{H_2S}$ under a refractory form
+\item[\textbf{98}] storage of $\molecule{H_2S}$ under a refractory form (commented in the code)
 \item[\textbf{99}] Adsorption on grains
 \end{itemize}
 
