--- a/DOC/nautilus.bib
+++ b/DOC/nautilus.bib
@@ -24,3 +24,91 @@
    adsurl = {http://adsabs.harvard.edu/abs/1992ApJS...82..167H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2009A&A...496..281O,
+   author = {{{\"O}berg}, K.~I. and {van Dishoeck}, E.~F. and {Linnartz}, H.
+	},
+    title = "{Photodesorption of ices I: CO, N$_{2}$, and CO$_{2}$}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0809.1333},
+ keywords = {astrochemistry, molecular processes, methods: laboratory, ultraviolet: ISM, ISM: molecules, circumstellar matter},
+     year = 2009,
+    month = mar,
+   volume = 496,
+    pages = {281-293},
+      doi = {10.1051/0004-6361/200810207},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2009A%26A...496..281O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009ApJ...693.1209O,
+   author = {{{\"O}berg}, K.~I. and {Linnartz}, H. and {Visser}, R. and {van Dishoeck}, E.~F.
+	},
+    title = "{Photodesorption of Ices. II. H$_{2}$O and D$_{2}$O}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0812.1918},
+ keywords = {astrochemistry, circumstellar matter, ISM: molecules, methods: laboratory, molecular data, molecular processes, ultraviolet: ISM},
+     year = 2009,
+    month = mar,
+   volume = 693,
+    pages = {1209-1218},
+      doi = {10.1088/0004-637X/693/2/1209},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2009ApJ...693.1209O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009A&A...504..891O,
+   author = {{{\"O}berg}, K.~I. and {Garrod}, R.~T. and {van Dishoeck}, E.~F. and 
+	{Linnartz}, H.},
+    title = "{Formation rates of complex organics in UV irradiated CH\_3OH-rich ices. I. Experiments}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0908.1169},
+ primaryClass = "astro-ph.GA",
+ keywords = {astrochemistry, astrobiology, molecular processes, methods: laboratory, stars: circumstellar matter, ISM: molecules},
+     year = 2009,
+    month = sep,
+   volume = 504,
+    pages = {891-913},
+      doi = {10.1051/0004-6361/200912559},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2009A%26A...504..891O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014MNRAS.440.3557R,
+   author = {{Reboussin}, L. and {Wakelam}, V. and {Guilloteau}, S. and {Hersant}, F.
+	},
+    title = "{Grain-surface reactions in molecular clouds: the effect of cosmic rays and quantum tunnelling}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1403.5189},
+ primaryClass = "astro-ph.GA",
+ keywords = {astrochemistry, diffusion, ISM: clouds, cosmic rays, ISM: molecules},
+     year = 2014,
+    month = jun,
+   volume = 440,
+    pages = {3557-3567},
+      doi = {10.1093/mnras/stu462},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2014MNRAS.440.3557R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015MNRAS.447.4004R,
+   author = {{Ruaud}, M. and {Loison}, J.~C. and {Hickson}, K.~M. and {Gratier}, P. and 
+	{Hersant}, F. and {Wakelam}, V.},
+    title = "{Modelling complex organic molecules in dense regions: Eley-Rideal and complex induced reaction}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1412.6256},
+ primaryClass = "astro-ph.SR",
+ keywords = {astrochemistry, ISM: abundances, ISM: clouds, ISM: molecules},
+     year = 2015,
+    month = mar,
+   volume = 447,
+    pages = {4004-4017},
+      doi = {10.1093/mnras/stu2709},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2015MNRAS.447.4004R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
